tests/ui/unknown_variant_attr.rs
use quickcheck_richderive::Arbitrary;

#[derive(Arbitrary)]
enum E {
  #[quickcheck(bogus)]
  A,
  B,
}

fn main() {}
